# Autotuner

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_debug.sh  build_release.bat  build_release_mac.sh  compose.yml
engine/: CMakeLists.txt
engine/include/autotuner/: AudioBuffer.h  Backend.h  CircularAudioBuffer.h  GoalPeriodCalculator.h  IGoalPeriodCalculator.h  INormalizedSquareDifferenceCalculator.h  IPeriodDetector.h  IPitchBender.h  IValidPeriodCalculator.h  NormalizedSquareDifferenceCalculator.h  PeriodDetector.h  PitchBender.h  ValidPeriodCalculator.h
engine/source/: AudioBuffer.cpp  Backend.cpp  CircularAudioBuffer.cpp  GoalPeriodCalculator.cpp  NormalizedSquareDifferenceCalculator.cpp  PeriodDetector.cpp  PitchBender.cpp  ValidPeriodCalculator.cpp
frontend/include/: Processor.h
frontend/source/: Main.cpp  Processor.cpp
tests/integration/: CMakeLists.txt
tests/integration/source/: AudioBufferTestCase.cpp  CircularAudioBufferTestCase.cpp  GoalPeriodCalculatorTestCase.cpp  NormalizedSquareDifferenceCalculatorTestCase.cpp  PeriodDetectorTestCase.cpp  PitchBenderTestCase.cpp
